<resources>
    <string name="app_name">欢乐竞拍</string>
    <string name="tip_exit">别按了，再按就退出了呀！</string>
    <string name="tip_empty">暂无记录</string>
    <string name="tip_empty_data">暂无数据</string>
    <string name="tip_coming">敬请期待</string>
    <string name="title_debug">服务器选择</string>

    <!-- tab -->
    <string name="tab_home">首页</string>
    <string name="tab_latest">最新成交</string>
    <string name="tab_category">全部商品</string>
    <string name="tab_me">个人中心</string>

    <!-- tab home -->
    <string name="type_hot">正在热拍</string>
    <string name="type_newbie">新手推荐</string>
    <string name="join_auction">参与竞拍</string>
    <string name="auction_finish">竞拍已结束</string>
    <string name="format_announce">%1$s以%2$s拍得%3$s</string>
    <string name="error_qq">请检查QQ客户端是否正常!</string>
    <string name="all_bask">晒单</string>
    <string name="bottom">已经到底部啦～</string>

    <!-- tab latest -->
    <string name="format_deal_person">成交人： %1$s</string>
    <string name="latest_market_price">市场价： ￥%1$s</string>
    <string name="latest_deal_price">成交价： ￥%1$s</string>
    <string name="category_market_price">市场价：%1$s</string>

    <!-- tab me -->
    <string name="login_register">登录/注册</string>
    <string name="auction_coin_formatter">%1$d\n拍币</string>
    <string name="free_coin_formatter">%1$d\n赠币</string>
    <string name="point">%1$d\n积分</string>
    <string name="my_order">我的订单</string>
    <string name="my_card">我的卡密</string>
    <string name="my_bask">我的晒单</string>
    <string name="my_service">客服中心</string>
    <string name="my_message">消息通知</string>
    <string name="auction_going">正在拍</string>
    <string name="auction_win">已拍中</string>
    <string name="auction_unpaid">待付款</string>
    <string name="receive_time">领取时间：%1$s</string>
    <string name="easy_copy">一键复制</string>
    <string name="select_all">全选(已选择%1$d个)</string>
    <string name="tip_clipboard">已成功复制到粘帖版</string>
    <string name="title_about">关于我们</string>
    <string name="version">版本：V%1$s</string>

    <!-- message -->
    <string name="title_message">消息中心</string>
    <string name="message_detail">消息详情</string>
    <string name="message_auction">竞拍消息</string>
    <string name="message_delivery">物流消息</string>
    <string name="message_notice">系统公告</string>

    <!-- setting -->
    <string name="setting">设置</string>
    <string name="service_protocol">服务协议</string>
    <string name="about_us">关于我们</string>
    <string name="clear_cache">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="tip_logout">是否确认退出该账号</string>
    <string name="tip_cache">确认清除缓存吗</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <!-- login -->
    <string name="password_login">密码登录</string>
    <string name="captcha_login">免密登录</string>
    <string name="hint_phone">请输入手机号码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_password_new">请输入新密码</string>
    <string name="hint_password_old">请输入您的旧密码(如无则无需填写)</string>
    <string name="hint_password_rule">需8–20位含字母\\数字\\符号至少两种</string>
    <string name="hint_password_confirm">请再次输入密码</string>
    <string name="hint_captcha">请输入验证码</string>
    <string name="login">登录</string>
    <string name="get_captcha">获取验证码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="find_password">找回密码</string>
    <string name="change_password">密码管理</string>
    <string name="password_old">旧密码</string>
    <string name="password_new">新密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="close_tip">不再提示</string>
    <string name="tip_captcha">获取验证码可直接登录，免注册免密码登录</string>
    <string name="tip_password">您的账号还未设置密码，设置密码可增强安全性</string>
    <string name="set_password">新密码设置</string>
    <string name="skip">跳过，暂不设置</string>
    <string name="register_success">注册成功</string>

    <!-- balance -->
    <string name="account_balance">账户余额</string>
    <string name="auction_coin">拍币</string>
    <string name="free_coin">赠币</string>
    <string name="format_balance">拍币余额：%1$d</string>
    <string name="format_free_balance">赠币余额：%1$d</string>
    <string name="tip_empty_coin">您暂未有拍币记录哦～</string>
    <string name="tip_empty_free">您暂未有赠币记录哦～</string>

    <!-- order -->
    <string name="order">订单记录</string>
    <string name="order_all">全部</string>
    <string name="order_going">正在拍</string>
    <string name="order_win">已拍中</string>
    <string name="order_unpaid">待付款</string>
    <string name="charge">充值</string>
    <string name="go_check">去查看</string>
    <string name="go_on">继续竞拍</string>
    <string name="format_deal_price">成交价：￥%1$s</string>
    <string name="format_deal_time">成交时间：%1$s</string>
    <string name="format_bid_times">我已出价：%1$d次</string>
    <string name="format_bid_refund">我已出价：%1$d次（退币%2$d）</string>
    <string name="format_title">(第%1$d期) %2$s</string>
    <string name="hot_going">火热竞拍中……</string>
    <string name="bid_now">马上竞拍</string>
    <string name="tip_empty_order">您暂未有记录哦～</string>

    <!-- auction detail -->
    <string name="auction_detail">竞拍详情</string>
    <string name="goods_detail">商品详情</string>
    <string name="no_person">暂无人出价</string>
    <string name="price_start">起拍价</string>
    <string name="price_step">加价幅度</string>
    <string name="more_record">查看更多出价记录</string>
    <string name="auction_rules">竞拍规则</string>
    <string name="fee">手续费</string>
    <string name="format_fee">%1$d币/次</string>
    <string name="countdown_time">竞拍倒计时</string>
    <string name="return_percent">返币比例额</string>
    <string name="previous_deal">往期成交</string>
    <string name="bask_share">晒单分享</string>
    <string name="my_bid_times">我已出价：%1$d拍币，%2$d赠币</string>
    <string name="price_current">当前价</string>
    <string name="price_deal">成交价</string>
    <string name="format_market_price">(市场价: ￥%1$s)</string>
    <string name="format_current_price">当前价: ￥%1$s</string>
    <string name="bid_out">出局</string>
    <string name="bid_first">领先</string>
    <string name="bid_deal">成交</string>
    <string name="detail_btn_bid">出价\n（%1$d拍币/次）</string>
    <string name="bid_times">出价:%1$d次</string>
    <string name="detail_btn_go_latest">前往最新一期</string>
    <string name="detail_btn_cancel">取消剩余出价</string>
    <string name="auto_bid_progress">已出价 %1$d/%2$d</string>
    <string name="save">节省</string>
    <string name="auction_good">竞拍商品</string>
    <string name="know">了解</string>
    <string name="rule">
        1、所有商品以0元起拍，每次出价消耗一定数量的拍币，同时商品价格以0.1元递增。\n\n
        2、在初始倒计时内即可出价，进入竞拍倒计时后，当用户对某件商品进行出价的同时，该商品将被自动充值倒计时，期间直至计时器归零，如没有其他用户对该商品出价您便成功拍得该商品。\n\n
        3、若成功拍得商品，请尽快以成交价购买竞拍商品，购买后即可获得商品。\n\n
        4、若竞拍失败，将返还消耗拍币的30%（比例视商品而定），赠币不返还。
    </string>
    <string name="bid_record">出价记录</string>
    <string name="not_login">您还未登录</string>
    <string name="login_now">立即登录</string>
    <string name="tip_win">恭喜您！成功以%1$s成交价拍中商品%2$s</string>
    <string name="check_detail">查看详情</string>
    <string name="selected_number">自动出价%1$d次</string>
    <string name="number_picker_0">10</string>
    <string name="number_picker_1">30</string>
    <string name="number_picker_2">50</string>
    <string name="number_picker_3">100</string>
    <string name="title_chart">历史走势</string>
    <string name="axis_y">成交价(￥)</string>
    <string name="axis_x">期数</string>
    <string name="chart_title">最新50期统计</string>
    <string name="chart_min">最低成交价: ￥%1$s</string>
    <string name="chart_max">最高成交价: ￥%1$s</string>
    <string name="chart_tip">(说明：走势图仅供参考娱乐)</string>

    <!-- order detail -->
    <string name="order_detail">拍品详情</string>
    <string name="progress_bask">已晒单</string>
    <string name="progress_confirm">已确认领奖方式</string>
    <string name="progress_pay">已付款</string>
    <string name="progress_win">已拍中</string>
    <string name="go_pay">去付款</string>
    <string name="mail_username">收货人姓名</string>
    <string name="phone">手机号码</string>
    <string name="mail_address">收货地址</string>
    <string name="mail_info">物流信息</string>
    <string name="confirm_address">确认收货地址</string>
    <string name="add_mail_address">添加收货地址</string>
    <string name="select_virtual_address">选择充值号码</string>
    <string name="change_address">更改地址</string>
    <string name="tip_mail_info">将在1–5个工作日发货</string>
    <string name="virtual_address">充值号码</string>
    <string name="check_card">查看卡密</string>

    <!-- bask -->
    <string name="check_bask">查看晒单</string>
    <string name="go_bask">去晒单</string>
    <string name="bask">晒单</string>
    <string name="send">发送</string>
    <string name="tip_bask">说点什么…</string>
    <string name="expand">展开</string>
    <string name="fold">收起</string>

    <!-- order pay -->
    <string name="order_pay">拍品购买</string>
    <string name="select_pay_type">选择支付方式</string>
    <string name="confirm_pay">确认支付 (%1$s)</string>
    <string name="error_wechat">请检查微信客户端是否正常!</string>
    <string name="error_alipay">请检查支付宝客户端是否正常!</string>
    <string name="tip_finish_pay">是否已完成支付</string>
    <string name="unpaid">未支付</string>
    <string name="paid">我已支付</string>

    <!-- auction pay -->
    <string name="pay">支付</string>
    <string name="pay_balance">账户余额：%1$d拍币/%2$d赠币</string>

    <!-- charge pay -->
    <string name="charge_page">充值页面</string>
    <string name="select_charge_amount">选择充值金额</string>
    <string name="hint_input_amount">请输入金额</string>
    <string name="charge_pay">马上充值 (￥%1$d)</string>

    <!-- manager -->
    <string name="title_manager">帐号管理</string>
    <string name="avatar">头像</string>
    <string name="username">昵称</string>
    <string name="store">保存</string>
    <string name="hint_username">好的名字带给你好的运气～</string>
    <string name="manage">管理</string>
    <string name="manage_password">密码管理</string>

    <!-- address -->
    <string name="manage_address">地址管理</string>
    <string name="manage_contact">联系人管理</string>
    <string name="edit_contact">编辑联系人</string>
    <string name="add_address">＋添加收货地址</string>
    <string name="select_address">选择收货地址</string>
    <string name="add_contact">＋添加联系人</string>
    <string name="title_add_contact">添加联系人</string>
    <string name="select_contact">选择联系人</string>
    <string name="default_address">默认地址</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="contact">收货人</string>
    <string name="contact_phone">联系电话</string>
    <string name="hint_contact_phone">请输入联系方式</string>
    <string name="detail_address">详细地址</string>
    <string name="street">街道</string>
    <string name="area">地区</string>
    <string name="select">选择</string>
    <string name="tip_address">实物收货地址用于实物奖品中奖后的发货，最多可添加3个</string>
    <string name="tip_contact">手机号码的填写用于手机话费等虚拟奖品的充值及转让时对方注册号码的选择，最多添加5个</string>
    <string name="tip_empty_address">您尚未添加任何收货地址哦～</string>
    <string name="tip_empty_contact">您尚未添加任何联系方式哦～</string>
    <string name="tip_add_address">点击下方按钮及时添加～</string>
    <string name="confirm_contact">确认后，商品将发到该联系人的账号上</string>

    <!-- upgrade -->
    <string name="upgrade_title">检测到新版本 V%s 是否更新?</string>
</resources>
