<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.happy.auction.module.me.SettingActivity">
    <data>
        <import type="android.view.View"/>
        <variable
            name="user"
            type="com.happy.auction.entity.response.UserInfo"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_toolbar_title"
            style="@style/TextTitle"
            android:text="@string/setting"/>

        <ImageView
            android:id="@+id/imageView"
            style="@style/IconBack"
            app:layout_constraintBottom_toBottomOf="@+id/tv_toolbar_title"
            app:layout_constraintStart_toStartOf="@+id/tv_toolbar_title"
            app:layout_constraintTop_toTopOf="@+id/tv_toolbar_title"/>

        <TextView
            android:id="@+id/tv_service_protocol"
            style="@style/TextItemSetting"
            android:drawableLeft="@drawable/ic_setting_service"
            android:drawablePadding="5dp"
            android:onClick="onClickServiceProtocol"
            android:text="@string/service_protocol"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_toolbar_title"/>

        <TextView
            android:id="@+id/tv_about_us"
            style="@style/TextItemSetting"
            android:layout_marginTop="1dp"
            android:drawableLeft="@drawable/ic_setting_about"
            android:drawablePadding="5dp"
            android:onClick="onClickAboutUs"
            android:text="@string/about_us"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_service_protocol"/>

        <TextView
            android:id="@+id/tv_cache"
            style="@style/TabMeTextItem"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:drawableLeft="@drawable/ic_setting_clear"
            android:drawablePadding="5dp"
            android:onClick="onClickCache"
            android:text="@string/clear_cache"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_us"/>

        <TextView
            android:id="@+id/tv_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/text_normal"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cache"
            app:layout_constraintEnd_toEndOf="@+id/tv_cache"
            app:layout_constraintTop_toTopOf="@+id/tv_cache"/>

        <TextView
            android:id="@+id/tv_server"
            style="@style/TextItemSetting"
            android:layout_marginTop="1dp"
            android:drawableLeft="@drawable/ic_setting_about"
            android:drawablePadding="5dp"
            android:onClick="onClickServer"
            android:text="@string/title_debug"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cache"
            tools:visibility="visible"/>

        <Button
            style="@style/ButtonCorner"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="30dp"
            android:onClick="onClickLogout"
            android:text="@string/logout"
            android:visibility="@{user==null ? View.GONE : View.VISIBLE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_server"/>

    </android.support.constraint.ConstraintLayout>
</layout>