<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="fragment"
            type="com.happy.auction.module.login.CaptchaLoginFragment"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.happy.auction.module.login.CaptchaLoginFragment">
        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#FDF6D5"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/tip_captcha"
            android:textColor="@color/text_normal"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:drawablePadding="2sp"
            android:drawableRight="@drawable/ic_close_tip"
            android:gravity="center_vertical"
            android:onClick="@{fragment::onClickClose}"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/close_tip"
            android:textColor="#78A9D4"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tip"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_tip"
            tools:visibility="visible"/>

        <EditText
            android:id="@+id/et_phone"
            style="@style/LoginEditText"
            android:layout_marginTop="8dp"
            android:afterTextChanged="@{fragment::afterPhoneChanged}"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLength="11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tip"/>

        <com.happy.auction.ui.TimerButton
            android:id="@+id/btn_captcha"
            style="@style/ButtonCorner"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:enabled="false"
            android:onClick="@{fragment::onClickCaptcha}"
            android:text="@string/get_captcha"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/et_phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_phone"/>

        <EditText
            android:id="@+id/et_captcha"
            style="@style/LoginEditText"
            android:layout_marginTop="1dp"
            android:afterTextChanged="@{fragment::afterCaptchaChanged}"
            android:hint="@string/hint_captcha"
            android:inputType="numberSigned"
            android:maxLength="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone"/>

        <Button
            android:id="@+id/btn_OK"
            style="@style/ButtonCorner"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="30dp"
            android:enabled="false"
            android:onClick="@{fragment::onClickLogin}"
            android:text="@string/login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_captcha"/>
    </android.support.constraint.ConstraintLayout>
</layout>