<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.happy.auction.module.login.SetPasswordActivity">
    <data>
        <variable
            name="activity"
            type="com.happy.auction.module.login.SetPasswordActivity"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_toolbar_title"
            style="@style/TextTitle"
            android:text="@string/set_password"/>

        <ImageView
            style="@style/IconBack"
            app:layout_constraintBottom_toBottomOf="@+id/tv_toolbar_title"
            app:layout_constraintStart_toStartOf="@+id/tv_toolbar_title"
            app:layout_constraintTop_toTopOf="@+id/tv_toolbar_title"/>

        <TextView
            android:id="@+id/tv_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="53dp"
            android:text="@string/register_success"
            android:textColor="@color/main_red"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_toolbar_title"/>

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/tip_password"
            android:textColor="@color/text_normal"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_success"/>


        <EditText
            android:id="@+id/et_password"
            style="@style/LoginEditText"
            android:layout_marginTop="10dp"
            android:afterTextChanged="@{activity::afterTextChanged}"
            android:hint="@string/hint_password_new"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tip"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:onClick="onClickEye"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/ic_eye"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_password"/>

        <EditText
            android:id="@+id/et_password_confirm"
            style="@style/LoginEditText"
            android:layout_marginTop="1dp"
            android:afterTextChanged="@{activity::afterTextChanged}"
            android:hint="@string/hint_password_confirm"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:onClick="onClickEyeConfirm"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/ic_eye"
            app:layout_constraintBottom_toBottomOf="@+id/et_password_confirm"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_password_confirm"/>

        <Button
            android:id="@+id/btn_OK"
            style="@style/ButtonCorner"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="22dp"
            android:enabled="false"
            android:onClick="onClickConfirm"
            android:text="@string/ok"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password_confirm"/>

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="22dp"
            android:text="@string/skip"
            android:textColor="@color/text_normal"
            android:onClick="onClickSkip"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_OK"/>
    </android.support.constraint.ConstraintLayout>
</layout>