<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="number"
            type="android.databinding.ObservableInt"/>
        <variable
            name="picker"
            type="com.happy.auction.module.detail.NumberPicker"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_number_picker"
        android:paddingBottom="30dp">
        <TextView
            android:id="@+id/tv_select_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:paddingBottom="7dp"
            android:text="@{picker.formatSelectNumber(number)}"
            android:textColor="@color/text_dark"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_0"
            style="@style/NumberPicker"
            android:layout_marginLeft="13dp"
            android:onClick="@{picker::onClickNumber}"
            android:text="@string/number_picker_0"
            app:layout_constraintEnd_toStartOf="@+id/tv_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_number"/>

        <TextView
            android:id="@+id/tv_1"
            style="@style/NumberPicker"
            android:onClick="@{picker::onClickNumber}"
            android:text="@string/number_picker_1"
            app:layout_constraintEnd_toStartOf="@+id/tv_2"
            app:layout_constraintStart_toEndOf="@+id/tv_0"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_number"/>

        <TextView
            android:id="@+id/tv_2"
            style="@style/NumberPicker"
            android:onClick="@{picker::onClickNumber}"
            android:text="@string/number_picker_2"
            app:layout_constraintEnd_toStartOf="@+id/tv_3"
            app:layout_constraintStart_toEndOf="@+id/tv_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_number"/>

        <TextView
            android:id="@+id/tv_3"
            style="@style/NumberPicker"
            android:layout_marginRight="13dp"
            android:onClick="@{picker::onClickNumber}"
            android:text="@string/number_picker_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_2"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_number"/>
    </android.support.constraint.ConstraintLayout>
</layout>